initial bootstrap & jQuery

--- a/index.html
+++ b/index.html
@@ -7,9 +7,17 @@
 	<title>Enyo</title>
 	<link rel="stylesheet" type="text/css" href="general/normalize.css">
 	<link rel="stylesheet" type="text/css" href="general/style.css">
+	<link rel="stylesheet" type="text/css" href="general/bootstrap.css">
 
 </head>
 <body>
+
+<h1>hello world</h1>
+
+<!-- javascrit -->
+<script src="https://ajax.googleapis.com/ajax/libs/angular_material/1.1.4/angular-material.min.js"></script>
+<script type="text/javascript" src="js/bootstrap.js"></script>
+<script type="text/javascript" src="js/script.js"></script>
 
 </body>
 </html>
